--- a/clase14/index.html
+++ b/clase14/index.html
@@ -7,8 +7,13 @@
     <title>Document</title>
     <!--Styles-->
     <link rel="stylesheet" href="./styles/styles.css">
+    <!--fonts-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 <body>
+    <div class="header1"><p>Descuentos del 20%</p></div>
+    <div class="header2"><h1>Card Super Heroes</h1></div>
+    <button class="sticky-button"><a style="text-decoration: none;" href=""></a>+</a></button>
     <div class="cont-card">
         <div class="card">
             <img class="footer-img" src="./imgs/batf.png" alt="">
@@ -23,9 +28,9 @@
         </div>
 
         <div class="card">
-            <img class="footer-img" src="./imgs/batf.png" alt="">
-            <img  class="hero" src="./imgs/bat.png" alt="">
-            <h1>BATMAN</h1>
+            <img class="footer-img" src="./imgs/wonderf.png" alt="">
+            <img  class="hero" src="./imgs/wonder.png" alt="">
+            <h1>Wonder Woman</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                Nulla, est. Accusantium debitis repellendus nesciunt, odit
                earum dolore dignissimos nemo quam nobis placeat expedita 
@@ -35,9 +40,21 @@
         </div>
 
         <div class="card">
-            <img class="footer-img" src="./imgs/batf.png" alt="">
-            <img  class="hero" src="./imgs/bat.png" alt="">
-            <h1>BATMAN</h1>
+            <img class="footer-img" src="./imgs/superf.png" alt="">
+            <img  class="hero" src="./imgs/super.png" alt="">
+            <h1>Super Man</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+               Nulla, est. Accusantium debitis repellendus nesciunt, odit
+               earum dolore dignissimos nemo quam nobis placeat expedita 
+               corrupti tempora numquam iure voluptates veniam quis?
+            </p>
+            <button>Ver Más</button>
+        </div>
+
+        <div class="card">
+            <img class="footer-img" src="./imgs/herleyf.png" alt="">
+            <img  class="hero" src="./imgs/herley.png" alt="">
+            <h1>Herley</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                Nulla, est. Accusantium debitis repellendus nesciunt, odit
                earum dolore dignissimos nemo quam nobis placeat expedita 
@@ -48,5 +65,10 @@
        
         
     </div>
+
+    <footer>
+        <p>Todos los derechos reservados frontendI</p>
+        <i class="fab fa-github fa-4x"></i>
+    </footer>
 </body>
 </html>
